--- a/deploy/msteamsfiles/manifest.json
+++ b/deploy/msteamsfiles/manifest.json
@@ -2,7 +2,7 @@
     "$schema": "https://developer.microsoft.com/en-us/json-schemas/teams/v1.9/MicrosoftTeams.schema.json",
     "manifestVersion": "1.9",
     "version": "1.0.0",
-    "id": "<msteamsappguid-placeholder>",
+    "id": "863f2ce9-fd91-4245-99ad-d4327244c26b",
     "packageName": "com.sap.sfsf.leaverequest",
     "developer": {
         "name": "SAP",
@@ -26,7 +26,7 @@
     "staticTabs": [{
         "entityId": "com.sap.s4hana.suppliercallab.event",
         "name": "Event",
-        "contentBotId": "<msappid-placeholder>",
+        "contentBotId": "1e8dd446-5fdd-4881-9afe-574e81346c78",
         "scopes": [
             "personal"
         ]
@@ -50,7 +50,7 @@
     ],
     "bots": [
         {
-            "botId": "<msappid-placeholder>",
+            "botId": "1e8dd446-5fdd-4881-9afe-574e81346c78",
             "isNotificationOnly": false,
             "supportsFiles": false,
             "scopes": [
@@ -67,7 +67,7 @@
         "*.hana.ondemand.com"
     ],
     "webApplicationInfo": {
-        "id": "<msappid-placeholder>",
-        "resource": "api://<domain-placeholder>/botid-<msappid-placeholder>"
+        "id": "1e8dd446-5fdd-4881-9afe-574e81346c78",
+        "resource": "api://sap-dev-teams.cfapps.us10.hana.ondemand.com/botid-1e8dd446-5fdd-4881-9afe-574e81346c78"
     }
 }
